// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`emit asserts for:  2663 1`] = `
Object {
  "code": "function App() {
  const intl = useIntl(); // Uncomment either of the following 'error' functions and run \`npm run build\` to see errors.

  async function error1() {
    await intl.formatMessage({
      \\"id\\": \\"5ce0d\\",
      \\"defaultMessage\\": \\"foo\\"
    });
  }

  async function ok1() {
    const message = intl.formatMessage({
      \\"id\\": \\"5ce0d\\",
      \\"defaultMessage\\": \\"foo\\"
    });
    await message;
  } // async function error2() {
  //   return intl.formatMessage({ defaultMessage: 'foo', description: 'foo' });
  // }


  async function ok2() {
    const message = intl.formatMessage({
      \\"id\\": \\"5ce0d\\",
      \\"defaultMessage\\": \\"foo\\"
    });
    return message;
  } // async function error3() {
  //   await console.log(
  //     intl.formatMessage({ defaultMessage: 'foo', description: 'foo' })
  //   );
  // }


  async function ok3() {
    const result = console.log(intl.formatMessage({
      \\"id\\": \\"5ce0d\\",
      \\"defaultMessage\\": \\"foo\\"
    }));
    await result;
  }

  return null;
}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "foo",
        "description": "foo",
        "id": "5ce0d",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  FormattedMessage 1`] = `
Object {
  "code": "import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
export default class Foo extends Component {
  render() {
    return <FormattedMessage id=\\"foo.bar.baz\\" defaultMessage=\\"Hello World!\\" />;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  additionalComponentNames 1`] = `
Object {
  "code": "import React, { Component } from 'react';

function CustomMessage() {}

export default class Foo extends Component {
  render() {
    return <CustomMessage id=\\"greeting-world\\" defaultMessage=\\"Hello World!\\" />;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello World!",
        "description": "Greeting to the world",
        "id": "greeting-world",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  additionalFunctionNames 1`] = `
Object {
  "code": "// @react-intl project:foo
import React, { Component } from 'react';

function CustomMessage() {}

export default class Foo extends Component {
  render() {
    return <CustomMessage id={formatMessage({
      \\"id\\": \\"acbd1\\",
      \\"defaultMessage\\": \\"foo\\"
    })} description={$formatMessage({
      \\"id\\": \\"92e00\\",
      \\"defaultMessage\\": \\"foo2\\"
    })} defaultMessage=\\"Hello World!\\" />;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "foo",
        "description": undefined,
        "id": "acbd1",
      },
      Object {
        "defaultMessage": "foo2",
        "description": undefined,
        "id": "92e00",
      },
    ],
    "meta": Object {
      "project": "foo",
    },
  },
}
`;

exports[`emit asserts for:  ast 1`] = `
Object {
  "code": "import React, { Component } from 'react';
import { FormattedMessage, defineMessage, defineMessages } from 'react-intl';
defineMessage({
  \\"id\\": \\"defineMessage\\",
  \\"defaultMessage\\": [{
    \\"type\\": 0,
    \\"value\\": \\"this is a \\"
  }, {
    \\"type\\": 3,
    \\"style\\": \\"full\\",
    \\"value\\": \\"dt\\"
  }]
});
defineMessages({
  foo: {
    \\"id\\": \\"defineMessages1\\",
    \\"defaultMessage\\": [{
      \\"type\\": 0,
      \\"value\\": \\"this is a \\"
    }, {
      \\"type\\": 4,
      \\"style\\": \\"full\\",
      \\"value\\": \\"dt\\"
    }]
  },
  bar: {
    \\"id\\": \\"defineMessages2\\",
    \\"defaultMessage\\": [{
      \\"type\\": 0,
      \\"value\\": \\"this is a \\"
    }, {
      \\"type\\": 2,
      \\"style\\": null,
      \\"value\\": \\"dt\\"
    }]
  }
});
export default class Foo extends Component {
  render() {
    Intl.formatMessage({
      \\"id\\": \\"intl.formatMessage\\",
      \\"defaultMessage\\": [{
        \\"type\\": 0,
        \\"value\\": \\"foo \\"
      }, {
        \\"type\\": 6,
        \\"pluralType\\": \\"cardinal\\",
        \\"value\\": \\"s\\",
        \\"offset\\": 0,
        \\"options\\": {
          \\"one\\": {
            \\"value\\": [{
              \\"type\\": 0,
              \\"value\\": \\"1\\"
            }]
          },
          \\"other\\": {
            \\"value\\": [{
              \\"type\\": 0,
              \\"value\\": \\"2\\"
            }]
          }
        }
      }]
    });
    return <FormattedMessage id=\\"foo.bar.baz\\" defaultMessage={[{
      \\"type\\": 0,
      \\"value\\": \\"Hello World!\\"
    }]} />;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "this is a {dt, date, full}",
        "description": undefined,
        "id": "defineMessage",
      },
      Object {
        "defaultMessage": "this is a {dt, time, full}",
        "description": undefined,
        "id": "defineMessages1",
      },
      Object {
        "defaultMessage": "this is a {dt, number}",
        "description": undefined,
        "id": "defineMessages2",
      },
      Object {
        "defaultMessage": "foo {s, plural, one{1} other{2}}",
        "description": undefined,
        "id": "intl.formatMessage",
      },
      Object {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  defineMessage 1`] = `
Object {
  "code": "// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessage, FormattedMessage } from 'react-intl';
const msgs = {
  header: defineMessage({
    \\"id\\": \\"foo.bar.baz\\",
    \\"defaultMessage\\": \\"Hello World!\\"
  }),
  content: defineMessage({
    \\"id\\": \\"foo.bar.biff\\",
    \\"defaultMessage\\": \\"Hello Nurse!\\"
  }),
  kittens: defineMessage({
    \\"id\\": \\"app.home.kittens\\",
    \\"defaultMessage\\": \\"{count, plural, =0 {😭} one {# kitten} other {# kittens}}\\"
  }),
  trailingWhitespace: defineMessage({
    \\"id\\": \\"trailing.ws\\",
    \\"defaultMessage\\": \\"Some whitespace\\"
  }),
  escaped: defineMessage({
    \\"id\\": \\"escaped.apostrophe\\",
    \\"defaultMessage\\": \\"A quoted value ''{value}'\\"
  })
};
export default class Foo extends Component {
  render() {
    return <div>
        <h1>
          <FormattedMessage {...msgs.header} />
        </h1>
        <p>
          <FormattedMessage {...msgs.content} />
        </p>
        <p>
          <FormattedMessage {...msgs.kittens} />
        </p>
      </div>;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      Object {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      Object {
        "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
        "description": "Counts kittens",
        "id": "app.home.kittens",
      },
      Object {
        "defaultMessage": "Some whitespace",
        "description": "Whitespace",
        "id": "trailing.ws",
      },
      Object {
        "defaultMessage": "A quoted value ''{value}'",
        "description": "Escaped apostrophe",
        "id": "escaped.apostrophe",
      },
    ],
    "meta": Object {
      "project": "amazing",
    },
  },
}
`;

exports[`emit asserts for:  defineMessages 1`] = `
Object {
  "code": "// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const msgs = defineMessages({
  header: {
    \\"id\\": \\"foo.bar.baz\\",
    \\"defaultMessage\\": \\"Hello World!\\"
  },
  content: {
    \\"id\\": \\"foo.bar.biff\\",
    \\"defaultMessage\\": \\"Hello Nurse!\\"
  },
  kittens: {
    \\"id\\": \\"app.home.kittens\\",
    \\"defaultMessage\\": \\"{count, plural, =0 {😭} one {# kitten} other {# kittens}}\\"
  },
  trailingWhitespace: {
    \\"id\\": \\"trailing.ws\\",
    \\"defaultMessage\\": \\"Some whitespace\\"
  },
  escaped: {
    \\"id\\": \\"escaped.apostrophe\\",
    \\"defaultMessage\\": \\"A quoted value ''{value}'\\"
  }
});
export default class Foo extends Component {
  render() {
    return <div>
        <h1>
          <FormattedMessage {...msgs.header} />
        </h1>
        <p>
          <FormattedMessage {...msgs.content} />
        </p>
        <p>
          <FormattedMessage {...msgs.kittens} />
        </p>
      </div>;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      Object {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      Object {
        "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
        "description": "Counts kittens",
        "id": "app.home.kittens",
      },
      Object {
        "defaultMessage": "Some whitespace",
        "description": "Whitespace",
        "id": "trailing.ws",
      },
      Object {
        "defaultMessage": "A quoted value ''{value}'",
        "description": "Escaped apostrophe",
        "id": "escaped.apostrophe",
      },
    ],
    "meta": Object {
      "project": "amazing",
    },
  },
}
`;

exports[`emit asserts for:  defineMessagesPreserveWhitespace 1`] = `
Object {
  "code": "// @react-intl project:amazing
import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const msgs = defineMessages({
  header: {
    \\"id\\": \\"foo.bar.baz\\",
    \\"defaultMessage\\": \\"Hello World!\\"
  },
  content: {
    \\"id\\": \\"foo.bar.biff\\",
    \\"defaultMessage\\": \\"Hello Nurse!\\"
  },
  kittens: {
    \\"id\\": \\"app.home.kittens\\",
    \\"defaultMessage\\": \\"{count, plural, =0 {😭} one {# kitten} other {# kittens}}\\"
  },
  trailingWhitespace: {
    \\"id\\": \\"trailing.ws\\",
    \\"defaultMessage\\": \\"   Some whitespace   \\"
  },
  escaped: {
    \\"id\\": \\"escaped.apostrophe\\",
    \\"defaultMessage\\": \\"A quoted value ''{value}'\\"
  },
  newline: {
    \\"id\\": \\"newline\\",
    \\"defaultMessage\\": \\"this is     a message\\"
  },
  linebreak: {
    \\"id\\": \\"linebreak\\",
    \\"defaultMessage\\": \\"this is\\\\na message\\"
  },
  templateLinebreak: {
    \\"id\\": \\"templateLinebreak\\",
    \\"defaultMessage\\": \\"this is\\\\n    a message\\"
  }
});
export default class Foo extends Component {
  render() {
    return <div>
        <h1>
          <FormattedMessage {...msgs.header} />
        </h1>
        <p>
          <FormattedMessage {...msgs.content} />
        </p>
        <p>
          <FormattedMessage {...msgs.kittens} />
        </p>
        <p>
          <FormattedMessage id=\\"inline.linebreak\\" defaultMessage=\\"formatted message
						with linebreak\\" />
        </p>
      </div>;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      Object {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      Object {
        "defaultMessage": "{count, plural, =0 {😭} one {# kitten} other {# kittens}}",
        "description": "Counts kittens",
        "id": "app.home.kittens",
      },
      Object {
        "defaultMessage": "   Some whitespace   ",
        "description": "Whitespace",
        "id": "trailing.ws",
      },
      Object {
        "defaultMessage": "A quoted value ''{value}'",
        "description": "Escaped apostrophe",
        "id": "escaped.apostrophe",
      },
      Object {
        "defaultMessage": "this is     a message",
        "description": "this is     a     description",
        "id": "newline",
      },
      Object {
        "defaultMessage": "this is
a message",
        "description": "this is
a
description",
        "id": "linebreak",
      },
      Object {
        "defaultMessage": "this is
    a message",
        "description": "this is
    a
    description",
        "id": "templateLinebreak",
      },
      Object {
        "defaultMessage": "formatted message
						with linebreak",
        "description": "foo
						bar",
        "id": "inline.linebreak",
      },
    ],
    "meta": Object {
      "project": "amazing",
    },
  },
}
`;

exports[`emit asserts for:  descriptionsAsObjects 1`] = `
Object {
  "code": "import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl'; // @react-intl project:amazing2

export default class Foo extends Component {
  render() {
    return <FormattedMessage id=\\"foo.bar.baz\\" defaultMessage=\\"Hello World!\\" />;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello World!",
        "description": Object {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator.",
        },
        "id": "foo.bar.baz",
      },
    ],
    "meta": Object {
      "project": "amazing2",
    },
  },
}
`;

exports[`emit asserts for:  empty 1`] = `
Object {
  "code": "import React, { Component } from 'react';
import { defineMessage } from 'react-intl';
export default class Foo extends Component {
  render() {
    return <div></div>;
  }

}",
  "data": Object {
    "messages": Array [],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  enforceDefaultMessage 1`] = `
Object {
  "code": "import React, { Component } from 'react';
import { FormattedMessage, defineMessages } from 'react-intl';
defineMessages({
  test: {
    \\"id\\": \\"TRANSLATION_KEY\\"
  }
});
const testMessage = {
  id: 'TRANSLATION_KEY2'
};
export default class Foo extends Component {
  render() {
    return <>
        <FormattedMessage id=\\"foo.bar.baz\\" />
        <FormattedMessage {...testMessage} />
      </>;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": undefined,
        "description": undefined,
        "id": "TRANSLATION_KEY",
      },
      Object {
        "defaultMessage": undefined,
        "description": undefined,
        "id": "foo.bar.baz",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  enforceDescriptions 1`] = `
Object {
  "code": "import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
export default class Foo extends Component {
  render() {
    return <FormattedMessage id=\\"foo.bar.baz\\" defaultMessage=\\"Hello World!\\" />;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello World!",
        "description": undefined,
        "id": "foo.bar.baz",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  extractFromFormatMessageCall 1`] = `
Object {
  "code": "import { FormattedMessage, injectIntl } from 'react-intl';
import React, { Component } from 'react';
const objectPointer = {
  id: 'foo.bar.invalid',
  defaultMessage: 'This cannot be extracted',
  description: 'the plugin only supports inline objects'
};

class Foo extends Component {
  render() {
    const {
      intl
    } = this.props;
    const {
      intl: {
        formatMessage
      }
    } = this.props;
    const msgs = {
      baz: this.props.intl.formatMessage({
        \\"id\\": \\"foo.bar.baz\\",
        \\"defaultMessage\\": \\"Hello World!\\"
      }),
      biff: intl.formatMessage({
        \\"id\\": \\"foo.bar.biff\\",
        \\"defaultMessage\\": \\"Hello Nurse!\\"
      }),
      qux: formatMessage({
        \\"id\\": \\"foo.bar.qux\\",
        \\"defaultMessage\\": \\"Hello Stranger!\\"
      }),
      invalid: this.props.intl.formatMessage(objectPointer)
    };
    return <div>
        <h1>{msgs.header}</h1>
        <p>{msgs.content}</p>
        <span>
          <FormattedMessage id=\\"foo\\" defaultMessage=\\"bar\\" />
        </span>
      </div>;
  }

}

export default injectIntl(Foo);",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      Object {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      Object {
        "defaultMessage": "Hello Stranger!",
        "description": "A different message",
        "id": "foo.bar.qux",
      },
      Object {
        "defaultMessage": "bar",
        "description": "baz",
        "id": "foo",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  extractFromFormatMessageCallStateless 1`] = `
Object {
  "code": "import { FormattedMessage, injectIntl, useIntl } from 'react-intl';
import React from 'react';

function myFunction(param1, {
  formatMessage,
  formatDate
}) {
  return formatMessage({
    \\"id\\": \\"inline1\\",
    \\"defaultMessage\\": \\"Hello params!\\"
  }) + formatDate(new Date());
}

const child = myFunction(filterable, intl);

function SFC() {
  const {
    formatMessage
  } = useIntl();
  return formatMessage({
    \\"id\\": \\"hook\\",
    \\"defaultMessage\\": \\"hook <b>foo</b>\\"
  });
}

const Foo = ({
  intl: {
    formatMessage
  }
}) => {
  const msgs = {
    qux: formatMessage({
      \\"id\\": \\"foo.bar.quux\\",
      \\"defaultMessage\\": \\"Hello <b>Stateless!</b>\\"
    })
  };
  return <div>
      <h1>{msgs.header}</h1>
      <p>{msgs.content}</p>
      <span>
        <FormattedMessage id=\\"foo\\" defaultMessage=\\"bar\\" />
      </span>
    </div>;
};

export default injectIntl(Foo);",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello params!",
        "description": "A stateless message",
        "id": "inline1",
      },
      Object {
        "defaultMessage": "hook <b>foo</b>",
        "description": "hook",
        "id": "hook",
      },
      Object {
        "defaultMessage": "Hello <b>Stateless!</b>",
        "description": "A stateless message",
        "id": "foo.bar.quux",
      },
      Object {
        "defaultMessage": "bar",
        "description": "baz",
        "id": "foo",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  formatMessageCall 1`] = `
Object {
  "code": "import React, { Component } from 'react';
import { injectIntl, FormattedMessage } from 'react-intl';
const objectPointer = {
  id: 'foo.bar.invalid',
  defaultMessage: 'This cannot be extracted',
  description: 'the plugin only supports inline objects'
};

class Foo extends Component {
  render() {
    const msgs = {
      baz: this.props.intl.formatMessage({
        \\"id\\": \\"foo.bar.baz\\",
        \\"defaultMessage\\": \\"Hello World!\\"
      }),
      biff: this.props.intl.formatMessage({
        \\"id\\": \\"foo.bar.biff\\",
        \\"defaultMessage\\": \\"Hello Nurse!\\"
      }),
      invalid: this.props.intl.formatMessage(objectPointer)
    };
    return <div>
        <h1>{msgs.header}</h1>
        <p>{msgs.content}</p>
        <span>
          <FormattedMessage id=\\"foo\\" defaultMessage=\\"bar\\" />
        </span>
      </div>;
  }

}

export default injectIntl(Foo);",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "foo.bar.baz",
      },
      Object {
        "defaultMessage": "Hello Nurse!",
        "description": "Another message",
        "id": "foo.bar.biff",
      },
      Object {
        "defaultMessage": "bar",
        "description": "baz",
        "id": "foo",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  idInterpolationPattern 1`] = `
Object {
  "code": "import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const msgs = defineMessages({
  header: {
    \\"id\\": \\"fixtures.idInterpolationPattern.4d1460\\",
    \\"defaultMessage\\": \\"Hello World!\\"
  },
  content: {
    \\"id\\": \\"foo.bar.biff\\",
    \\"defaultMessage\\": \\"Hello Nurse!\\"
  }
});
export default class Foo extends Component {
  render() {
    return <div>
        <h1>
          <FormattedMessage {...msgs.header} />
        </h1>
        <p>
          <FormattedMessage {...msgs.content} />
        </p>
        <FormattedMessage id=\\"fixtures.idInterpolationPattern.36a8c8\\" defaultMessage=\\"Hello World!\\" />
        <FormattedMessage id=\\"fixtures.idInterpolationPattern.5ce864\\" defaultMessage=\\"NO ID\\" />
      </div>;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "fixtures.idInterpolationPattern.4d1460",
      },
      Object {
        "defaultMessage": "Hello Nurse!",
        "description": Object {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator.",
        },
        "id": "foo.bar.biff",
      },
      Object {
        "defaultMessage": "Hello World!",
        "description": "Something for the translator. Another description",
        "id": "fixtures.idInterpolationPattern.36a8c8",
      },
      Object {
        "defaultMessage": "NO ID",
        "description": "Something for the translator. Another description",
        "id": "fixtures.idInterpolationPattern.5ce864",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  inline 1`] = `
Object {
  "code": "import React, { Component } from 'react';
import { FormattedMessage, defineMessage } from 'react-intl';
export default class Foo extends Component {
  render() {
    return <div>
        <FormattedMessage id=\\"foo.bar.baz\\" defaultMessage=\\"Hello World!\\" />
        {defineMessage({
        \\"id\\": \\"header\\",
        \\"defaultMessage\\": \\"Hello World!\\"
      })}
        {defineMessage({
        \\"id\\": \\"header2\\",
        \\"defaultMessage\\": \\"Hello World!\\"
      })}
      </div>;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
      Object {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "header",
      },
      Object {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "header2",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  overrideIdFn 1`] = `
Object {
  "code": "import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const msgs = defineMessages({
  header: {
    \\"id\\": \\"overrideIdFn.js.foo.bar.baz.12.string\\",
    \\"defaultMessage\\": \\"Hello World!\\"
  },
  content: {
    \\"id\\": \\"overrideIdFn.js.foo.bar.biff.12.object\\",
    \\"defaultMessage\\": \\"Hello Nurse!\\"
  }
});
export default class Foo extends Component {
  render() {
    return <div>
        <h1>
          <FormattedMessage {...msgs.header} />
        </h1>
        <p>
          <FormattedMessage {...msgs.content} />
        </p>
        <FormattedMessage id=\\"overrideIdFn.js.foo.bar.zoo.12.object\\" defaultMessage=\\"Hello World!\\" />
        <FormattedMessage id=\\"overrideIdFn.js..5.object\\" defaultMessage=\\"NO ID\\" />
      </div>;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello World!",
        "description": "The default message",
        "id": "overrideIdFn.js.foo.bar.baz.12.string",
      },
      Object {
        "defaultMessage": "Hello Nurse!",
        "description": Object {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator.",
        },
        "id": "overrideIdFn.js.foo.bar.biff.12.object",
      },
      Object {
        "defaultMessage": "Hello World!",
        "description": Object {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator. Another description",
        },
        "id": "overrideIdFn.js.foo.bar.zoo.12.object",
      },
      Object {
        "defaultMessage": "NO ID",
        "description": Object {
          "metadata": "Additional metadata content.",
          "text": "Something for the translator. Another description",
        },
        "id": "overrideIdFn.js..5.object",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  removeDefaultMessage 1`] = `
Object {
  "code": "import React, { Component } from 'react';
import { defineMessages, FormattedMessage } from 'react-intl';
const messages = defineMessages({
  foo: {
    \\"id\\": \\"greeting-user\\"
  }
});
export default class Foo extends Component {
  render() {
    return <FormattedMessage id=\\"greeting-world\\" />;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "Hello, {name}",
        "description": "Greeting the user",
        "id": "greeting-user",
      },
      Object {
        "defaultMessage": "Hello World!",
        "description": "Greeting to the world",
        "id": "greeting-world",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`emit asserts for:  templateLiteral 1`] = `
Object {
  "code": "import React, { Component } from 'react';
import { FormattedMessage, defineMessage } from 'react-intl';
defineMessage({
  \\"id\\": \\"template\\",
  \\"defaultMessage\\": \\"should remove newline and extra spaces\\"
});
export default class Foo extends Component {
  render() {
    return <FormattedMessage id=\\"foo.bar.baz\\" defaultMessage={\`Hello World!\`} />;
  }

}",
  "data": Object {
    "messages": Array [
      Object {
        "defaultMessage": "should remove newline and extra spaces",
        "description": undefined,
        "id": "template",
      },
      Object {
        "defaultMessage": "Hello World!",
        "description": "The default message.",
        "id": "foo.bar.baz",
      },
    ],
    "meta": Object {},
  },
}
`;

exports[`extractSourceLocation 1`] = `
"import React, { Component } from 'react';
import { FormattedMessage } from 'react-intl';
export default class Foo extends Component {
  render() {
    return <FormattedMessage id=\\"foo.bar.baz\\" defaultMessage=\\"Hello World!\\" />;
  }

}"
`;

exports[`extractSourceLocation 2`] = `
Object {
  "messages": Array [
    Object {
      "defaultMessage": "Hello World!",
      "description": undefined,
      "end": Any<Object>,
      "file": Any<String>,
      "filename": undefined,
      "id": "foo.bar.baz",
      "identifierName": undefined,
      "start": Any<Object>,
    },
  ],
  "meta": Object {},
}
`;
